<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>982</width>
    <height>691</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="centralWidget">
   <widget class="CustomDrawWidget" name="widget" native="true">
    <property name="geometry">
     <rect>
      <x>70</x>
      <y>10</y>
      <width>861</width>
      <height>341</height>
     </rect>
    </property>
   </widget>
   <widget class="QTextBrowser" name="textBrowser">
    <property name="geometry">
     <rect>
      <x>60</x>
      <y>340</y>
      <width>861</width>
      <height>192</height>
     </rect>
    </property>
   </widget>
   <widget class="QRadioButton" name="red_Button">
    <property name="geometry">
     <rect>
      <x>70</x>
      <y>540</y>
      <width>95</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
     <string>Red</string>
    </property>
   </widget>
   <widget class="QRadioButton" name="green_Button">
    <property name="geometry">
     <rect>
      <x>70</x>
      <y>570</y>
      <width>95</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
     <string>Green</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_deletePoints">
    <property name="geometry">
     <rect>
      <x>150</x>
      <y>540</y>
      <width>121</width>
      <height>28</height>
     </rect>
    </property>
    <property name="text">
     <string>Удалить точки</string>
    </property>
   </widget>
   <widget class="QRadioButton" name="task1">
    <property name="geometry">
     <rect>
      <x>290</x>
      <y>540</y>
      <width>171</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
     <string>Пересечение отрезков</string>
    </property>
   </widget>
   <widget class="QRadioButton" name="task3">
    <property name="geometry">
     <rect>
      <x>610</x>
      <y>540</y>
      <width>151</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
     <string>Выпуклая оболочка</string>
    </property>
   </widget>
   <widget class="QRadioButton" name="task2">
    <property name="geometry">
     <rect>
      <x>460</x>
      <y>540</y>
      <width>141</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
     <string>Предикат поворота</string>
    </property>
   </widget>
   <widget class="QRadioButton" name="task4">
    <property name="geometry">
     <rect>
      <x>290</x>
      <y>570</y>
      <width>95</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
     <string>Делоне</string>
    </property>
   </widget>
   <widget class="QRadioButton" name="task5">
    <property name="geometry">
     <rect>
      <x>370</x>
      <y>570</y>
      <width>201</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
     <string>Пересечения полигонов и тд</string>
    </property>
   </widget>
   <widget class="QRadioButton" name="task6">
    <property name="geometry">
     <rect>
      <x>590</x>
      <y>570</y>
      <width>151</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
     <string>Локализация точки</string>
    </property>
   </widget>
   <widget class="QPushButton" name="getResult">
    <property name="geometry">
     <rect>
      <x>150</x>
      <y>570</y>
      <width>121</width>
      <height>28</height>
     </rect>
    </property>
    <property name="text">
     <string>Посчитать</string>
    </property>
   </widget>
  </widget>
  <widget class="QMenuBar" name="menuBar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>982</width>
     <height>37</height>
    </rect>
   </property>
  </widget>
  <widget class="QToolBar" name="mainToolBar">
   <attribute name="toolBarArea">
    <enum>TopToolBarArea</enum>
   </attribute>
   <attribute name="toolBarBreak">
    <bool>false</bool>
   </attribute>
  </widget>
  <widget class="QStatusBar" name="statusBar"/>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <customwidgets>
  <customwidget>
   <class>CustomDrawWidget</class>
   <extends>QWidget</extends>
   <header>customdrawwidget.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
